--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+<div id="page"></div>
     <body><!---------------------------------------------------- BODY ----------------------------------------------->
         
 
@@ -75,22 +76,22 @@
           <div class="grid-container">
             
                 <div class="grid-item">
-                  <img src="./Componentes/k logo.jpeg" alt="1">
+                  <img src="./Components/k logo.jpeg" alt="1">
                 </div>
                 <div class="grid-item">
-                  <img src="./Componentes/k logo.jpeg" alt="2">
+                  <img src="./Components/k logo.jpeg" alt="2">
                 </div>
                 <div class="grid-item">
-                  <img src="./Componentes/k logo.jpeg" alt="3">
+                  <img src="./Components/k logo.jpeg" alt="3">
                 </div>
                 <div class="grid-item">
-                  <img src="./Componentes/k logo.jpeg" alt="4">
+                  <img src="./Components/k logo.jpeg" alt="4">
                 </div>
                 <div class="grid-item">
-                  <img src="./Componentes/k logo.jpeg" alt="5">
+                  <img src="./Components/k logo.jpeg" alt="5">
                 </div>
                 <div class="grid-item">
-                  <img src="./Componentes/k logo.jpeg" alt="6">
+                  <img src="./Components/k logo.jpeg" alt="6">
                 </div>
           </div><!-- items no carrinho -->
 
