--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
             <div class="column"><!--talao de compras-->
                 <div> 
                     <ul>
-                        <li>
+                        <ul>
                             Inserir Cupon Desconto
-                        </li>
-                        <li>
-                            <input id="cupon_desconto" type="text" placeholder="codigo coupon">
+                        </ul>
+                        <ul>
+                            <input id="cupon" type="text" placeholder="codigo coupon">
                             <button id="bt_submeter_cupon" type="button">Submit</button>
-                        </li>
+                        </ul>
                         <br>
                     </ul>
                 </div>
               <ul>
-                <li>Preço Total:<label id="preco_total">0.00</label></li>
-                <li>Desconto: <label id="desconto">0.00</label></li>
-                <li>Preço Final: <label id="precoFinal">0.00</label></li>
-                <li><button id="bt_efetuar_pagamento" >Efetuar pagamento</button></li>
-                <li><button id="bt_master_card">Master Card</button><button id="bt_pay_pal">Paypal</button><button id="bt_visa">Visa</button><button id="bt_American_express">American Express</button></li>
+                <ul>Preço Total: <label id="precototal">0.00</label></ul>
+                <ul>Desconto: <label id="desconto">0.00</label></ul>
+                <ul>Preço Final: <label id="precoFinal">0.00</label></ul><br>
+                <ul><button id="bt_efetuar_pagamento" >Efetuar pagamento</button></ul>
+                <ul><button id="bt_master_card">Master Card</button><button id="bt_pay_pal">Paypal</button><button id="bt_visa">Visa</button><button id="bt_American_express">American Express</button></ul>
               </ul>
             </div>
           </div><!-- items no carrinho -->
