--- a/index.html
+++ b/index.html
@@ -49,23 +49,22 @@
           <div class="grid-container">
             
                 <div class="grid-item">                  
-                  <img src="https://fakestoreapi.com/img/61IBBVJvSDL._AC_SY879_.jpg" alt="1">
+                  <img id="1" src="https://fakestoreapi.com/img/61IBBVJvSDL._AC_SY879_.jpg">
                 </div>
                 <div class="grid-item">
-                  <img src="https://fakestoreapi.com/img/61U7T1koQqL._AC_SX679_.jpg" alt="2">
+                  <img id="2" src="https://fakestoreapi.com/img/61U7T1koQqL._AC_SX679_.jpg" >
                 </div>
                 <div class="grid-item">
-                  <img src="https://fakestoreapi.com/img/71kWymZ+c+L._AC_SX679_.jpg" alt="3">
+                  <img id="3" src="https://fakestoreapi.com/img/71kWymZ+c+L._AC_SX679_.jpg" >
                 </div>
                 <div class="grid-item">
-                  <img src="https://fakestoreapi.com/img/61mtL65D4cL._AC_SX679_.jpg" alt="4">
+                  <img id="4" src="https://fakestoreapi.com/img/61mtL65D4cL._AC_SX679_.jpg" >
                 </div>
                 <div class="grid-item">
-                  <img src="https://fakestoreapi.com/img/81QpkIctqPL._AC_SX679_.jpg" alt="5">
+                  <img id="5" src="https://fakestoreapi.com/img/81QpkIctqPL._AC_SX679_.jpg" >
                 </div>
-                <div class="grid-item">
-                  
-                  <img src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg" alt="6">
+                <div class="grid-item">                  
+                  <img id="6" src="https://fakestoreapi.com/img/81Zt42ioCgL._AC_SX679_.jpg" >
                 </div>
           </div><!-- items no carrinho -->
 
