--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kashikoi</title>
+  <title>CART Kashikoi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/navbar.css">
+  <link rel="stylesheet" href="/css/cart.css">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header id="header"></header>
-    <main id ="main"></main>
+    <main id ="main">
+
+      <div class="container"><!-- items no carrinho -->
+        <div class="column"><!-- items no carrinho -->
+          <ul id="Cart">
+          </ul>
+        </div>
+        <div class="column"><!--talao de compras-->
+            <div> 
+                <ul>
+                    <ul>
+                        Inserir Cupon Desconto
+                    </ul>
+                    <ul>
+                        <input id="cupon" type="text" placeholder="codigo coupon">
+                        <button id="bt_submeter_cupon" type="button">Submit</button>
+                    </ul>
+                    <br>
+                </ul>
+            </div>
+          <ul>
+            <ul>Preço Total: <label id="precototal">0.00</label></ul>
+            <ul>Desconto: <label id="desconto">0.00</label></ul>
+            <ul>Preço Final: <label id="precoFinal">0.00</label></ul><br>
+            <ul><button id="bt_efetuar_pagamento" >Efetuar pagamento</button></ul>
+            <ul><button id="bt_master_card">Master Card</button><button id="bt_pay_pal">Paypal</button><button id="bt_visa">Visa</button><button id="bt_American_express">American Express</button></ul>
+          </ul>
+        </div>
+      </div><!-- items no carrinho -->
+
+
+
+    </main>
     <footer id ="footer"></footer>
-  <script type="module" src="/main.js"></script>
+    <script type="module" src="/main.js"></script>
+    <script type="module" src="/scripts/cart.js"></script>
 </body>
 </html>
