search without EventClick
Já é possivel pesquisar os produtos após o terceiro caractere.
Alterações:
+ cardProducts.js
+ search_products.js
- shop.html

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -22,7 +22,8 @@
       </div>      
     </div>
     <div class="products-container">
-    <div class="DataGridProducts">
+        <div class="DataGridProducts">
+        <!--
         <div id="1" class="card">
           <img id="1" src="https://fakestoreapi.com/img/61IBBVJvSDL._AC_SY879_.jpg">
             <h4 id="title">Title</h4>
@@ -89,10 +90,13 @@
                 <a href=""><i class="fa fa-cart-plus fa-lg" aria-hidden="true"></i></a>
             </button>
         </div>
-
+    -->
+    </div>
+</div>
     </main>
     <footer id ="footer"></footer>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/scripts/shop.js"></script>
+    <script type="module" src="/Components/search_product.js"></script>
 </body>
 </html>
