--- a/pages/shop.html
+++ b/pages/shop.html
@@ -13,7 +13,7 @@
     <div class="search-button-flex-container"> 
         <div class="search-container">
             <i class="fa fa-search fa-lg" aria-hidden="true"></i>       
-            <input class="search" type="text" placeholder="Pesquisar">
+            <input class="search" type="text" placeholder="Pesquisar" id="search">
         </div>
         <div class="button-checkout-container">
             <button id = "buttonCart" class="goCheckout">Ir para carrinho</button>
