--- a/pages/cart.html
+++ b/pages/cart.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/navbar.css">
   <link rel="stylesheet" href="/css/cart.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header id="header"></header>
@@ -33,8 +34,12 @@
             <ul>Preço Total: <label id="precototal">0.00</label></ul>
             <ul>Desconto: <label id="desconto">0.00</label></ul>
             <ul>Preço Final: <label id="precoFinal">0.00</label></ul><br>
-            <ul><button id="bt_efetuar_pagamento" >Efetuar pagamento</button></ul>
-            <ul><button id="bt_master_card">Master Card</button><button id="bt_pay_pal">Paypal</button><button id="bt_visa">Visa</button><button id="bt_American_express">American Express</button></ul>
+            <ul><button id="bt_efetuar_pagamento" >Efetuar pagamento</button></ul><br>
+            <ul><button id="bt_master_card"></button>
+                <button id="bt_pay_pal">Paypal</button>
+                <button id="bt_visa">Visa</button>
+                <button id="bt_American_express">American Express</button>
+            </ul>
           </ul>
         </div>
       </div><!-- items no carrinho -->
