--- a/carousel.html
+++ b/carousel.html
@@ -84,19 +84,19 @@
   
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="https://fakestoreapi.com/img/61IBBVJvSDL._AC_SY879_.jpg" style="width:100%">
+    <img src="/images/c1.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="https://fakestoreapi.com/img/61U7T1koQqL._AC_SX679_.jpg" style="width:100%">
+    <img src="/images/c2.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="https://fakestoreapi.com/img/71kWymZ+c+L._AC_SX679_.jpg" style="width:100%">
+    <img src="/images/c3.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
