--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,7 @@
 <head>
   <title> ABOUT Kashikoi</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/about.css">
   <link rel="stylesheet" href="/css/navbar.css">
 </head>
