--- a/pages/cart.html
+++ b/pages/cart.html
@@ -21,7 +21,7 @@
             <div> 
                 <ul>
                     <ul>
-                        Inserir Cupon Desconto
+                        Inserir Cupon discount
                     </ul>
                     <ul>
                         <input id="cupon" type="text" placeholder="codigo coupon">
@@ -32,7 +32,7 @@
             </div>
           <ul>
             <ul>Preço Total: <label id="precototal">0.00</label></ul>
-            <ul>Desconto: <label id="desconto">0.00</label></ul>
+            <ul>discount: <label id="discount">0.00</label></ul>
             <ul>Preço Final: <label id="precoFinal">0.00</label></ul><br>
             <ul><button id="bt_efetuar_pagamento" >Efetuar pagamento</button></ul><br>
             <ul><button id="bt_master_card"></button>
