--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,10 +15,10 @@
             <!-- carousel -->
             <!-- setas -->
               <P class="centerText" >
-                <button id="bt_esquerda" class="arrowButton">
+                <button id="bt_left" class="arrowButton">
                   <i class="fa fa-angle-double-left" style="font-size:24px"></i>
                 </button>
-                <button id="bt_direita" class="arrowButton">       
+                <button id="bt_rigth" class="arrowButton">       
                   <i class="fa fa-angle-double-right" style="font-size:24px"></i>
                 </button>
               </P>         
