--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,7 @@
               <div class="form-container">
                 <form>
                   <div class="form-input">
-                    <input type="text" id="first-name" name="first-name" placeholder="First Name" required>
+                    <input type="text" id="first-name" name="first-name" placeholder="Name" required>
                   </div>
                   <div class="form-input">
                     <input type="text" id="company" name="company" placeholder="Company" required>
@@ -44,7 +44,7 @@
                     <textarea id="message" name="message" rows="15" placeholder="Write your message here:" required></textarea>
                   </div>
                   <div class="form-submit">
-                    <button type="submit">Submit</button>
+                    <button type="submit" id="bt_submit">Submit</button>
                   </div>
                 </form>
               </div>
