--- a/pages/cart.html
+++ b/pages/cart.html
@@ -32,9 +32,9 @@
             <!-- cupon -->
             <!-- totals -->
             <div class="grid3" id="totals">
-              <ul>Total Price: <label id="precototal">0.00</label></ul>
+              <ul>Total Price: <label id="totalPrice">0.00</label></ul>
               <ul>Discount: <label id="discount">0.00</label></ul>
-              <ul>Preço Final: <label id="precoFinal">0.00</label></ul><br>
+              <ul>Total: <label id="total">0.00</label></ul><br>
 
               <ul><button class ="blueButton" id="bt_payment">Make Purchase</ul></button><br>
 
