--- a/pages/cart.html
+++ b/pages/cart.html
@@ -12,7 +12,7 @@
     <header id="header"></header>
     <main id ="main">
 
-      <h1 class="title">O SEU CESTO:</h1>
+      <h1 class="title">Current Cart:</h1>
 
       <div class="grid_container"><!-- items no carrinho -->
         <div class="grid1"><!-- items no carrinho -->
