--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kashikoi</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/navbar.css">
 </head>
@@ -22,7 +23,7 @@
         <div class="gallery-container">
             <h1>Dolor Sit Amet</h1>
         <div class="gallery">
-            <div class="img1"><img src="/images/gallery-1.jpg" alt=""></div>
+            <div class="img1"><img src="./images/gallery-1.jpg" alt=""></div>
             <div class="img2"><img src="./images/gallery-2.jpg" alt=""></div>
             <div class="img3"><img src="./images/gallery-3.jpg" alt=""></div>
             <div class="img4"><img src="./images/gallery-4.jpg" alt=""></div>
