--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,9 @@
                 </button>
               </P>         
             <!-- setas -->   
-  
+            
+            <h2 class = "centerText topDownMargin">Contact Us</h2>
+            <br><br>
             <main>
 
             <!-- form_map -->
@@ -56,7 +58,8 @@
               </div>
             </div>  
             <!-- form_map -->
-            <h2 class = "centerText topDownMargin">Os Nossos Colaboradores Estão Prontos A Ajudar! </h2>
+            <br><br>
+            <h2 class = "centerText topDownMargin">Still not sure? contact our team and get close and personal! </h2><br><br>
             
             <!-- contacts -->
             <div class="contacts" id="staff"></div>
