Tradução - go to checkout

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -17,7 +17,7 @@
             <input class="search" type="text" placeholder="Search" id="search">
         </div>
         <div class="button-checkout-container">
-            <button id = "buttonCart" class="goCheckout">Ir para carrinho</button>
+            <button id = "buttonCart" class="goCheckout">Go to Checkout</button>
         </div>
       </div>      
     <main id ="main">
