better coupon handling

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -19,15 +19,15 @@
         <div class="grid1"><!-- items no carrinho -->
           <ul id="Cart"></ul>
           </div>
-          <!-- cupon   -->
-          <div class="grid2" id = "divcupon"> 
+          <!-- coupon   -->
+          <div class="grid2" id = "divcoupon"> 
                     <ul>
                       <ul>Have a coupon</ul>
-                      <ul><input id="cupon" type="text" placeholder="coupon code"><br><br></ul>
-                      <ul><buttonc class ="blueButton" id="bt_cupon" type="button">Apply</button>  </ul>                     
+                      <ul><input id="coupon" type="text" placeholder="coupon code"><br><br></ul>
+                      <ul><buttonc class ="blueButton" id="bt_coupon" type="button">Apply</button>  </ul>                     
                     </ul>
             </div>
-            <!-- cupon -->
+            <!-- coupon -->
             <!-- totals -->
             <div class="grid3" id="totals">
               <ul>Total Price: <label id="totalPrice">0.00</label></ul>
