--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
             <div class="slideshow-container" id="slides"></div>        
             <!-- carousel -->
             <!-- setas -->
-              <P class="centerText" >
+              <P class="centerText" id="carouselControls">
                 <button id="bt_left" class="arrowButton">
                   <i class="fa fa-angle-double-left" style="font-size:24px"></i>
                 </button>
